[gd_scene load_steps=2 format=3 uid="uid://b7djlp22nku24"]

[ext_resource type="Script" path="res://WeaponManager/weapon_manager.gd" id="1_rpq7x"]

[node name="WeaponManager" type="Node3D"]
script = ExtResource("1_rpq7x")

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
volume_db = -2.0

[node name="FireRateCooldown" type="Timer" parent="."]

[connection signal="timeout" from="FireRateCooldown" to="." method="_on_fire_rate_cooldown_timeout"]
